syntax = "proto3";

package test_hello_service;

option go_package = ".;test_hello_service";

service TestService {
	rpc SayHello (HelloRequest) returns (HelloReply);
	rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply);
}

message HelloRequest {
	string name = 1; 
}

message HelloReply {
	string message = 1;
}

message GoodbyeRequest{
	string name = 1;
}

message GoodbyeReply{
	string message = 1;
}